# spark-misc

./: .gitignore  README.md
data/json/: airline_customer_data.json  generated_data.json
data_source/basic/: README_simple_ds.md  test_simple_ds.py
metastore_db/: db.lck  service.properties
metastore_db/log/: logmirror.ctrl
src/py/: CLAUDE.md
src/py/blogs/: README.md  advanced_deduplication_longer_snippet.py  advanced_deduplication_shorter_snippet.py  business_logic_validation.py  deduplication_example.py  deduplication_snippet.py  permissive_mode.py  run_all_tests.py  schema_enforcement.py  smart_json_loader.py  test_advanced_dedup_longer.py  test_advanced_dedup_shorter.py  test_all_json_loaders.py  test_business_logic_validation.py  test_deduplication_example.py
src/py/blogs/data/: invalid_transactions.json  mixed_transactions.json
src/py/data_source/basic/: simple_ds.py
src/py/data_source/blogs/: permissive_mode.py  smart_json_loader.py
src/py/data_source/databricks_ldp_integration/: README.md  opensky_source_in_ldp.py  requestbin_sink_in_ldp.py
src/py/data_source/news/: .gitignore  README.md  examples.py  main.py  pyproject.toml  simple_test.py  (+4 more)
src/py/data_source/restapi/: CHANGELOG.md  INSTALL_TEST_PYPI.md  LICENSE  MANIFEST.in  PyPI_Upload_Instructions.md  README.md  README_PARTITIONING.md  README_PyPI.md  example.py  example_partition_usage.py  pyproject.toml  restapi.py  run_tests.py  test_comprehensive_partitioning.py  test_format_api.py  test_partitioning.py  test_restapi_partitioning.py
src/py/data_source/restapi/pyspark_rest_datasource/: __init__.py  datasource.py
src/py/data_source/restapi/pyspark_rest_datasource.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/py/data_source/restapi/restapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/py/databricks_apps/: README.md
src/py/databricks_apps/holiday_request_app/: CLAUDE.md  README.md  app.py  app.yaml  create_tables_and_schema.sql  pyproject.toml  requirements.txt
src/py/databricks_apps/simple_lakebase_app/: app.py  app.yaml  pyproject.toml  requirements.txt
src/py/databricks_apps/simple_streamlit_app/: app.py  app.yaml  pyproject.toml
src/py/databricks_apps/simple_streamlit_app/.databricks/sync-snapshots/: 697eada4bbfb5a5c.json
src/py/generators/: general_oil_rig_data_generator.py  general_order_generator.py  generator_utils.py
src/py/import_uitls_example/: .gitignore  import web_utils.py  import_data_ex.py  import_date_utils.py
src/py/ldp/: __init__.py  main.py
src/py/numpy/: np_pandas_ex_1.py  np_pyspark_pandas_ex_2.py
src/py/sc/: simple_pyspark_connect_app.py  simple_pyspark_connect_ex.py
src/py/scikit-learn/: scikit_learn_ex_2.py
src/py/sdp/: SDP_README  SDP_README.md  __init__.py  main.py  pyproject.toml
src/py/sdp/brickfood/: __init__.py  calculate_sales_tax.py  pipeline.yml  query_tables.py
src/py/sdp/brickfood/artifacts/utils/: order_gen_util.py
src/py/sdp/brickfood/metastore_db/: db.lck  service.properties
src/py/sdp/brickfood/metastore_db/log/: log.ctrl  logmirror.ctrl
src/py/sdp/brickfood/spark-warehouse/approved_orders_mv/: .part-00000-2ed0f720-33c1-46ec-9098-241dae19692c-c000.snappy.parquet.crc  part-00000-2ed0f720-33c1-46ec-9098-241dae19692c-c000.snappy.parquet
src/py/sdp/brickfood/spark-warehouse/fulfilled_orders_mv/: .part-00000-a41c6e57-6644-4820-8eb5-4c6a416f85af-c000.snappy.parquet.crc  part-00000-a41c6e57-6644-4820-8eb5-4c6a416f85af-c000.snappy.parquet
src/py/sdp/brickfood/spark-warehouse/orders_mv/: .part-00000-7e710af8-f55c-4961-9096-220877f1b88b-c000.snappy.parquet.crc  part-00000-7e710af8-f55c-4961-9096-220877f1b88b-c000.snappy.parquet
src/py/sdp/brickfood/spark-warehouse/pending_orders_mv/: .part-00000-e873e176-a1d6-481d-acf5-e39f0f4b2f49-c000.snappy.parquet.crc  part-00000-e873e176-a1d6-481d-acf5-e39f0f4b2f49-c000.snappy.parquet
src/py/sdp/brickfood/transformations/: approved_orders_mv.sql  orders_mv.py
src/py/sdp/oil_rigs/: __init__.py  pipeline.yml  query_oil_rigs_tables.py
src/py/sdp/oil_rigs/metastore_db/: db.lck  service.properties
src/py/sdp/oil_rigs/metastore_db/log/: log.ctrl
src/py/sdp/oil_rigs/spark-warehouse/eagle_ford_rig_mv/: .part-00000-b9220e80-8086-42f6-8c8e-c962553d3737-c000.snappy.parquet.crc  part-00000-b9220e80-8086-42f6-8c8e-c962553d3737-c000.snappy.parquet
src/py/sdp/oil_rigs/spark-warehouse/permian_rig_mv/: .part-00000-53bcff1e-a7fb-4db4-8b44-8ba4a85f349e-c000.snappy.parquet.crc  part-00000-53bcff1e-a7fb-4db4-8b44-8ba4a85f349e-c000.snappy.parquet
src/py/sdp/oil_rigs/spark-warehouse/pressure_events_mv/: .part-00000-65165488-d6c9-43fe-b2dd-b64e82168f01-c000.snappy.parquet.crc  .part-00001-65165488-d6c9-43fe-b2dd-b64e82168f01-c000.snappy.parquet.crc  part-00000-65165488-d6c9-43fe-b2dd-b64e82168f01-c000.snappy.parquet  part-00001-65165488-d6c9-43fe-b2dd-b64e82168f01-c000.snappy.parquet
src/py/sdp/oil_rigs/spark-warehouse/temperature_events_mv/: .part-00000-e2fe27dd-2c93-41f8-9518-3988a284a170-c000.snappy.parquet.crc  .part-00001-e2fe27dd-2c93-41f8-9518-3988a284a170-c000.snappy.parquet.crc  part-00000-e2fe27dd-2c93-41f8-9518-3988a284a170-c000.snappy.parquet  part-00001-e2fe27dd-2c93-41f8-9518-3988a284a170-c000.snappy.parquet
src/py/sdp/oil_rigs/spark-warehouse/water_level_events_mv/: .part-00000-8f8d2d18-d39a-45e9-a065-3fc34c096dda-c000.snappy.parquet.crc  .part-00001-8f8d2d18-d39a-45e9-a065-3fc34c096dda-c000.snappy.parquet.crc  part-00000-8f8d2d18-d39a-45e9-a065-3fc34c096dda-c000.snappy.parquet  part-00001-8f8d2d18-d39a-45e9-a065-3fc34c096dda-c000.snappy.parquet
src/py/sdp/oil_rigs/transformations/: oil_rig_events_mv.py  pressure_events_mv.sql
src/py/sdp/utils/: __init__.py  oil_gen_util.py  order_gen_util.py
src/py/udfs/: pandas_udf_ex_1.py  pandas_udf_ex_2.py
src/py/window_funcs/: README.md  WINDOW_FUNCTIONS_STRATEGY_GUIDE.md  aggregation_window_demo.py  first_last_value_demo.py  lead_lag_demo.py  moving_averages_demo.py  percentile_analysis_demo.py  ranking_operations_demo.py  requirements.txt  run_demo.py  test_all_readme_code.py  test_readme_code.py  test_strategy_code.py
(+136 files in other folders)
