[project]
name = "database-table-browser"
version = "0.1.0"
description = "A Streamlit app for browsing and exploring database tables with schema inspection and data visualization"
requires-python = ">=3.9"
dependencies = [
    "pandas==2.3.1",
    "databricks-sdk==0.57.0",
    "psycopg[binary]==3.2.9",
    "sqlalchemy==2.0.41",
    "streamlit==1.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
